--- a/src/pages/mywork.pug
+++ b/src/pages/mywork.pug
@@ -2,16 +2,4 @@ section.mywork#mywork-section
   .container.mywork__container
     h3.mywork__title Мои работы
     .mywork__desk
-      include ./slider 
-      .mywork__describe
-        .mywork__number 2
-        .mywork__tag
-          .mywork__languages
-            h5.mywork__language HTML
-          .mywork__languages
-            h5.mywork__language CSS
-          .mywork__languages
-            h5.mywork__language Javascript
-        h4.mywork__heading Сайт школы образования
-        p.mywork__text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-        a.mywork__site Посмотреть сайт
+      #slider-container
