--- a/src/pages/parallax-general.pug
+++ b/src/pages/parallax-general.pug
@@ -1,12 +1,12 @@
-.parallax-general
-  .parallax-general__element
+.parallax-general.js-general-area
+  .parallax-general__element.parallax-general__element--autumn
     +image("content/autumn.png", "paralax-general__image paralax-general__image--autumn", "", "presentation")
-  .parallax-general__element(data-speed="0.2")
+  .parallax-general__element.parallax-general__element--sheet1.js-parallax-layers(data-speed="0.2")
     +image("content/sheet1.png", "paralax-general__image paralax-general__image--sheet1", "", "presentation")
-  .parallax-general__element(data-speed="0.25")
+  .parallax-general__element.parallax-general__element--sheet2.js-parallax-layers(data-speed="0.25")
     +image("content/sheet2.png", "paralax-general__image paralax-general__image--sheet2", "", "presentation")
-  .parallax-general__element(data-speed="0.30")
+  .parallax-general__element.parallax-general__element--sheet3.js-parallax-layers(data-speed="0.30")
     +image("content/sheet3.png", "paralax-general__image paralax-general__image--sheet3", "", "presentation")
-  .parallax-general__element(data-speed="0.35")
+  .parallax-general__element.parallax-general__element--sheet4.js-parallax-layers(data-speed="0.35")
     +image("content/sheet4.png", "paralax-general__image paralax-general__image--sheet4", "", "presentation")
   
