--- a/src/pages/parallax-welcome.pug
+++ b/src/pages/parallax-welcome.pug
@@ -1,13 +1,13 @@
-.parallax-welcome
-    .parallax-welcome__element
+.parallax-welcome.js-welcome-area
+    .parallax-welcome__element.parallax-welcome__element--sky
         +image("content/sky.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element(data-speed="0.25")
+    .parallax-welcome__element.parallax-welcome__element--mountains.js-parallax-layers(data-speed="0.25")
         +image("content/mountains.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element(data-speed="0.35")
+    .parallax-welcome__element.parallax-welcome__element--train.js-parallax-layers(data-speed="0.35")
         +image("content/train.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element(data-speed="0.38")
+    .parallax-welcome__element.parallax-welcome__element--grass.js-parallax-layers(data-speed="0.38")
         +image("content/grass.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element(data-speed="0.45")
+    .parallax-welcome__element.parallax-welcome__element--shadow.js-parallax-layers(data-speed="0.45")
         +image("content/shadow.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element(data-speed="0.45")
+    .parallax-welcome__element.parallax-welcome__element--black.js-parallax-layers(data-speed="0.45")
         +image("content/black.png", "parallax__image", "", "presentation")
