--- a/src/styles/blocks/parallax-general.pcss
+++ b/src/styles/blocks/parallax-general.pcss
@@ -17,7 +17,7 @@
     height: 100%;
     will-change: transform;
 
-    &:nth-child(1) {
+    &--autumn {
         .paralax-general__image {
             object-fit: cover;
             width: 100%;
@@ -25,7 +25,7 @@
         }
     }
 
-    &:nth-child(2) {
+    &--sheet1 {
         .paralax-general__image {
             top: 155%;
             left: 50%;
@@ -33,7 +33,7 @@
         }
     }
 
-    &:nth-child(3) {
+    &--sheet2 {
         .paralax-general__image {
             top: 127%;
             left: 50%;
@@ -41,7 +41,7 @@
         }
     }
 
-    &:nth-child(4) {
+    &--sheet3 {
         .paralax-general__image {
             top: 169%;
             left: 50%;
@@ -49,7 +49,7 @@
         }
     }
 
-    &:nth-child(5) {
+    &--sheet4 {
         .paralax-general__image {
             top: 106%;
             right: 0%;
