--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -1,7 +1,7 @@
 .socials__icon {
     width: 25px;
     height: 25px;
-    opacity: .4;
+    opacity: 0.4;
     fill: #ffffff;
     &:hover {
         fill: #ff9a00;
