--- a/src/styles/blocks/parallax-welcome.pcss
+++ b/src/styles/blocks/parallax-welcome.pcss
@@ -18,7 +18,7 @@
     height: 100%;
     will-change: transform;
 
-    &:nth-child(1) {
+    &--sky {
         .parallax__image {
             object-fit: cover;
             width: 100%;
@@ -26,7 +26,7 @@
         }
     }
 
-    &:nth-child(2) {
+    &--mountains {
         .parallax__image {
             right: 0;
             top: 329px;
@@ -36,7 +36,7 @@
         }
     }
 
-    &:nth-child(3) {
+    &--train {
         .parallax__image {
             right: 0;
             top: 444px;
@@ -46,7 +46,7 @@
         }
     }
 
-    &:nth-child(4) {
+    &--grass {
         .parallax__image {
             right: 0;
             top: 846px;
@@ -56,7 +56,7 @@
         }
     }
 
-    &:nth-child(5) {
+    &--shadow {
         .parallax__image {
             right: 0;
             top: 668px;
@@ -66,7 +66,7 @@
         }
     }
 
-    &:nth-child(6) {
+    &--black {
         .parallax__image {
             right: 0;
             bottom: -590px;
