--- a/src/styles/blocks/skill-vue.pcss
+++ b/src/styles/blocks/skill-vue.pcss
@@ -1,43 +1,39 @@
 .skill {
-  position: relative;
-  width: 134px;
-  height: 134px;
+    position: relative;
+    width: 134px;
+    height: 134px;
   
-  @include tablets {
-    width: 135px;
-    height: 135px;
-  }
+    @include tablets {
+        width: 135px;
+        height: 135px;
+    }
 }
   
 .skill__circle {
-  fill: transparent;
-  &_under {
-    stroke: #e9e9e9;
-    stroke-width: 3;
-    opacity: 0.1;
-  }
-  &_above {
-    stroke-width: 9;
-    stroke-dasharray: 251;
-    stroke-dashoffset: 251;
-    opacity: 1;
-  }
+    fill: transparent;
+    &_under {
+      stroke: #e9e9e9;
+      stroke-width: 3;
+      opacity: 0.1;
+    }
+    &_above {
+      stroke-width: 9;
+      stroke-dasharray: 251;
+      stroke-dashoffset: 251;
+      opacity: 1;
+    }
 }
   
 .skill__circle-text {
-  opacity: 0.5;
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-size: 18px;
-  font-weight: 700;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  padding: 14px;
-  
-  @include phones {
-    font-size: 16px;
-  }
+    opacity: 0.5;
+    color: #ffffff;
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 14px;  
 }
